Add readme and license

--- a/example/index.html
+++ b/example/index.html
@@ -17,10 +17,8 @@
 <script src="../gl-image-zoom.js"></script>
 <script>
 
+// via https://unsplash.com/photos/w5uE11FiAc8
 glImage("max-hermansson-421712-unsplash.jpg")
-
-
-
 
 </script>
 
